--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^3.9.2",
     "babel-plugin-import": "^1.8.0",
     "dva": "^2.4.0",
+    "firebase": "^5.3.0",
     "react": "^16.2.0",
     "react-awesome-button": "^5.0.0",
     "react-dom": "^16.2.0",
