--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "babel-plugin-import": "^1.8.0",
     "dva": "^2.4.0",
     "firebase": "^5.3.0",
+    "npm-modules": "^1.0.1",
     "react": "^16.2.0",
     "react-awesome-button": "^5.0.0",
     "react-dom": "^16.2.0",
-    "react-responsive": "^5.0.0"
+    "react-responsive": "^5.0.0",
+    "styled-components": "^3.4.9"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
+    "babel-plugin-styled-components": "^1.7.1",
     "eslint": "^4.14.0",
     "eslint-config-umi": "^0.1.1",
     "eslint-plugin-flowtype": "^2.34.1",
